--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -225,7 +225,7 @@ footer hr {
 
 #alternative aside {
     width: 33%;
-    /*border: 1px solid green;*/
+    border: 1px solid green;
     float: left;
 }
 
@@ -254,4 +254,36 @@ footer hr {
     /*padding: 15px;*/
     padding: 2% 2% 0 2%;
     border-top: 1px solid rgb(0, 0, 0);
+}
+
+#thumbnails .thumbnails_row .thumbnail_block {
+    border: 1px solid orange;
+    width: 33%;
+    float: left;
+}
+
+#thumbnails .thumbnails_row .thumbnail_block .img_caption {
+    text-align: right;
+    font-size: 10px;
+    display: block;
+    color: grey;
+    font-family: karnak-normal-400, sans-serif;
+    margin: 0;
+}
+
+#thumbnails .thumbnails_row .thumbnail_block .img_date {
+    text-align: left;
+    font-size: 13px;
+    display: block;
+    color: grey;
+    font-family: karnak-normal-400, sans-serif;
+    margin: 0;
+    letter-spacing: 0.24px;
+}
+
+#thumbnails .thumbnails_row .thumbnail_block h3 {
+    font-size: 18px;
+    line-height: 22px;
+    padding: 0;
+    margin: 0;
 }
