--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -108,6 +108,7 @@ main {
 footer {
     /*border: 1px solid red;*/
     padding: 0 1%;
+    background-color: white;
 }
 
 #foot_title {
@@ -225,12 +226,28 @@ footer hr {
     /*border: 1px solid red;*/
 }
 
+#thumbnails .thumbnails_sub_title {
+    display: inline-block;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+#thumbnails .thumbnails_sub_title a {
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+}
+
+#thumbnails .thumbnails_sub_title a:hover {
+    text-decoration: underline;
+}
+
 #alternative aside {
     width: 32%;
     /*border: 1px solid green;*/
     float: left;
     border-top: 1px solid rgb(0, 0, 0);
-    margin-bottom: 14%;
+    margin-bottom: 19%;
     margin-left: 2%;
 }
 
@@ -262,7 +279,7 @@ footer hr {
 
 #thumbnails {
     border-top: 1px solid rgb(0, 0, 0);
-    padding-top: 2%;
+    /*padding-top: 2%;*/
 }
 
 #thumbnails .thumbnails_row .thumbnail_block {
@@ -306,4 +323,13 @@ footer hr {
     line-height: 22px;
     padding: 0;
     margin: 0;
+}
+
+.bottom_line_divisor {
+    display: inline-block;
+    width: 100%;
+    border-bottom: 1px solid black;
+    border-bottom-style: double;
+    border-bottom-color: grey;
+    padding-bottom: 19px;
 }
