--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,24 +4,22 @@
 
 body {
     margin: 0;
-    background: #f7f7f7;
+    background: #fff;
     font-family: karnak-normal-400, sans-serif;
 }
 
 nav {
     top: 0;
     width: 100%;
-    height: 42px;
-    overflow: auto;
     position: fixed;
+    overflow: hidden;
     padding: 5px 15px;
     background: #fff;
     border-bottom: 1px solid #ddd;
 }
 
-nav>span {
+nav > div {
     float: left;
-    height: 100%;
     width: 33.33%;
     vertical-align: middle;
 }
