--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,18 +10,18 @@ body {
 }
 
 nav {
-  top: 0;
-  width: 100%;
-  position: fixed;
-  overflow: hidden;
-  padding: 5px 15px;
-  background: #fff;
-  border-bottom: 1px solid #ddd;
+    top: 0;
+    width: 100%;
+    position: fixed;
+    overflow: hidden;
+    padding: 5px 15px;
+    background: #fff;
+    border-bottom: 1px solid #ddd;
 }
 
-nav > div {
-  float: left;
-  width: 33.33%;
+nav>div {
+    float: left;
+    width: 33.33%;
 }
 
 #menu svg {
@@ -30,11 +30,11 @@ nav > div {
 }
 
 #menu button {
-  border: none;
-  padding: 5px;
-  background: none;
-  border-radius: 3px;
-  vertical-align: middle;
+    border: none;
+    padding: 5px;
+    background: none;
+    border-radius: 3px;
+    vertical-align: middle;
 }
 
 #menu button:hover {
@@ -56,143 +56,145 @@ nav > div {
 }
 
 #logo svg {
-  top: 4px;
-  height: 25px;
-  position: relative;
+    top: 4px;
+    height: 25px;
+    position: relative;
 }
 
 #account {
-  text-align: right;
+    text-align: right;
 }
 
-#account button{
-  color: #fff;
-  cursor: pointer;
-  font-size: 0.75em;
-  padding: 5px 7px;
-  font-weight: bold;
-  border-radius: 3px;
-  text-transform: uppercase;
-  background-color: #6288a5;
-  border: 1px solid #326891;
+#account button {
+    color: #fff;
+    cursor: pointer;
+    font-size: 0.75em;
+    padding: 5px 7px;
+    font-weight: bold;
+    border-radius: 3px;
+    text-transform: uppercase;
+    background-color: #6288a5;
+    border: 1px solid #326891;
 }
 
 #account button:active {
-  color: #555;
-  background: #fff;
+    color: #555;
+    background: #fff;
 }
 
 main {
-  margin: auto 80px;
-  margin-top: 55px;
-  border-top: 1px solid transparent;
+    margin: auto 80px;
+    margin-top: 55px;
+    border-top: 1px solid transparent;
 }
 
 #photo {
-  margin-top: 30px;
+    margin-top: 30px;
 }
 
-#photo .title{
-  font-size: 2em;
-  font-style: italic;
-  margin: 20px 0;
+#photo .title {
+    font-size: 2em;
+    font-style: italic;
+    margin: 20px 0;
 }
 
-#photo .title span{
-  width: 50%;
-  margin: auto;
-  display: block;
+#photo .title span {
+    width: 50%;
+    margin: auto;
+    display: block;
 }
 
-#photo img{
-  width: 70%;
-  margin: auto;
-  display: block;
+#photo img {
+    width: 70%;
+    margin: auto;
+    display: block;
 }
 
 #photo p {
-  width: 70%;
-  color: #666;
-  margin: 15px auto;
+    width: 70%;
+    color: #666;
+    margin: 15px auto;
 }
 
-#photo p > span{
-  color: #888;
-  font-size: 0.9em;
+#photo p>span {
+    color: #888;
+    font-size: 0.9em;
 }
 
 .extra {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .extra ul {
-  margin: 0;
-  padding: 0;
-  float: right;
-  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    float: right;
+    list-style-type: none;
 }
 
-.extra ul > li{
-  display: inline-block;
+.extra ul>li {
+    display: inline-block;
 }
 
 article h2 {
-  width: 70%;
-  font-size: 1.25em;
-  font-weight: bold;
-  padding-left: 15%;
-  margin: 20px auto;
+    width: 70%;
+    font-size: 1.25em;
+    font-weight: bold;
+    padding-left: 15%;
+    margin: 20px auto;
 }
 
 article p {
-  width: 70%;
-  overflow: hidden;
-  font-size: 1.25em;
-  padding-left: 15%;
-  margin: 20px auto;
+    width: 70%;
+    overflow: hidden;
+    font-size: 1.25em;
+    padding-left: 15%;
+    margin: 20px auto;
 }
 
 article img {
-  width: 100%;
-  float:right;
-  margin: auto;
-  display: block;
+    width: 100%;
+    float: right;
+    margin: auto;
+    display: block;
 }
 
-article .author, article .extra {
-  width: 70%;
-  margin: 20px auto;
-  padding-left: 15%;
+article .author,
+article .extra {
+    width: 70%;
+    margin: 20px auto;
+    padding-left: 15%;
 }
 
 article .author {
-  font-size: 0.95em;
+    font-size: 0.95em;
 }
 
 article .author a {
-  color: #000;
-  text-decoration: none;
-  border-bottom: 1px solid #bbb;
+    color: #000;
+    text-decoration: none;
+    border-bottom: 1px solid #bbb;
 }
 
 article .author a:hover {
-  border-bottom-color: transparent;
+    border-bottom-color: transparent;
 }
 
 article a {
-  width: 20px;
-  height: 20px;
-  display: block;
-  text-align: center;
-  border-radius: 50%;
-  background: #f2f2f2;
-  box-sizing: content-box;
+    width: 20px;
+    height: 20px;
+    display: block;
+    text-align: center;
+    border-radius: 50%;
+    background: #f2f2f2;
+    box-sizing: content-box;
 }
 
 iframe {
-  margin: auto;
-  display: block;
+    margin: auto;
+    display: block;
 }
+
 
 /********* footer ***************************/
 
@@ -206,89 +208,89 @@ footer {
 }
 
 #bottom_menu li {
-  list-style: none;
-  border-top: 1px solid #ebebeb;
-  border-bottom: 1px solid #ebebeb;
-  font-size: 13px;
-  font-weight: 700;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  display: block;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  letter-spacing: 0.04rem;
+    list-style: none;
+    border-top: 1px solid #ebebeb;
+    border-bottom: 1px solid #ebebeb;
+    font-size: 13px;
+    font-weight: 700;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    display: block;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    letter-spacing: 0.04rem;
 }
 
 #blurred_row {
-  text-align: center;
+    text-align: center;
 }
 
 #blurred_row li {
-  list-style: none;
-  display: inline-block;
-  font-weight: inherit;
-  font-size: 100%;
-  padding: 0 5px;
+    list-style: none;
+    display: inline-block;
+    font-weight: inherit;
+    font-size: 100%;
+    padding: 0 5px;
 }
 
 #blurred_row a {
-  text-decoration: none;
-  font-size: 12px;
-  color: grey;
+    text-decoration: none;
+    font-size: 12px;
+    color: grey;
 }
 
 #blurred_row a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 footer .go2home {
-  /*border: 1px solid black;*/
-  float: right;
-  width: 40%;
-  text-align: right;
-  font-family: nyt-franklin;
-  font-size: 11px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 11px;
-  vertical-align: middle;
-  padding-top: 10px;
+    /*border: 1px solid black;*/
+    float: right;
+    width: 40%;
+    text-align: right;
+    font-family: nyt-franklin;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 11px;
+    vertical-align: middle;
+    padding-top: 10px;
 }
 
 footer .go2home a {
-  text-decoration: none;
-  color: rgb(98, 136, 165);
+    text-decoration: none;
+    color: rgb(98, 136, 165);
 }
 
 footer .go2home a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 #last_line .subscribe_bottom {
-  width: 15%;
-  float: right;
-  text-align: right;
-  text-transform: uppercase;
-  letter-spacing: 0.24px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: darkslategray;
+    width: 15%;
+    float: right;
+    text-align: right;
+    text-transform: uppercase;
+    letter-spacing: 0.24px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: darkslategray;
 }
 
 #last_line .bottom_txt {
-  width: 80%;
-  text-align: center;
-  /*border: 1px solid red;*/
-  float: left;
-  color: darkslategray;
-  letter-spacing: 0.24px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width: 80%;
+    text-align: center;
+    /*border: 1px solid red;*/
+    float: left;
+    color: darkslategray;
+    letter-spacing: 0.24px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 footer hr {
-  border-color: black;
+    border-color: black;
 }
 
 .lite_weight {
-  font-weight: 100;
+    font-weight: 100;
 }
 
 
@@ -298,95 +300,102 @@ footer hr {
 /****************** ALTERNATE *********************/
 
 #alternative {
-  /*border: 1px solid blue;*/
-  padding-left: 1%;
-  padding-right: 1%;
-  width: 100%;
-  margin-bottom: 100px;
-  padding-top: 2%;
+    /*border: 1px solid blue;*/
+    padding-left: 1%;
+    padding-right: 1%;
+    width: 100%;
+    margin-bottom: 100px;
+    padding-top: 2%;
 }
 
 #thumbnails {
-  width: 65%;
-  float: left;
+    width: 65%;
+    float: left;
 }
 
 #alternative aside {
-  width: 32%;
-  float: left;
-  border-top: 1px solid rgb(0, 0, 0);
-  margin-bottom: 14%;
-  margin-left: 2%;
+    width: 32%;
+    float: left;
+    border-top: 1px solid rgb(0, 0, 0);
+    margin-bottom: 23%;
+    margin-left: 2%;
 }
 
 #alternative .side_headings {
-  padding: 3.4% 10px;
-  border-bottom: 1px solid rgb(226, 226, 226);
-  border-top: 1px solid rgb(226, 226, 226);
-  font-family: nyt-cheltenham, georgia, "times new roman", times, serif;
-  font-size: 1.125rem;
-  line-height: 1.375rem;
+    padding: 3.4% 10px;
+    border-bottom: 1px solid rgb(226, 226, 226);
+    border-top: 1px solid rgb(226, 226, 226);
+    font-family: nyt-cheltenham, georgia, "times new roman", times, serif;
+    font-size: 1.125rem;
+    line-height: 1.375rem;
 }
 
 #alternative .side_headings a {
-  text-decoration: none;
-  color: rgb(18, 18, 18);
+    text-decoration: none;
+    color: rgb(18, 18, 18);
 }
 
 #alternative .side_headings a:hover {
-  color: rgb(226, 226, 226);
+    color: rgb(226, 226, 226);
 }
 
 #alternative h4 {
-  font-size: 1rem;
-  font-weight: 700;
-  line-height: 1.375rem;
-  /*padding: 15px;*/
-  padding: 0 2% 0 2%;
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1.375rem;
+    /*padding: 15px;*/
+    padding: 0 2% 0 2%;
 }
 
 #thumbnails {
-  border-top: 1px solid rgb(0, 0, 0);
-  padding-top: 2%;
+    border-top: 1px solid rgb(0, 0, 0);
+    padding-top: 2%;
 }
 
 #thumbnails .thumbnails_row .thumbnail_block {
-  width: 31%;
-  float: left;
-  padding-bottom: 4%;
-  margin-right: 1.9%;
+    width: 31%;
+    float: left;
+    padding-bottom: 4%;
+    margin-right: 1.9%;
 }
 
 #thumbnails .thumbnails_row .thumbnail_block img {
-  width: 95%;
+    width: 95%;
 }
 
 #thumbnails .thumbnails_row .thumbnail_block .img_caption {
-  text-align: right;
-  font-size: 10px;
-  display: block;
-  color: grey;
-  font-family: karnak-normal-400, sans-serif;
-  margin: 0;
+    text-align: right;
+    font-size: 10px;
+    display: block;
+    color: grey;
+    font-family: karnak-normal-400, sans-serif;
+    margin: 0;
 }
 
 #thumbnails .thumbnails_row {
-  margin-bottom: 40%;
+    margin-bottom: 40%;
+    min-height: 40px;
 }
 
 #thumbnails .thumbnails_row .thumbnail_block .img_date {
-  text-align: left;
-  font-size: 13px;
-  display: block;
-  color: grey;
-  font-family: karnak-normal-400, sans-serif;
-  margin: 0;
-  letter-spacing: 0.24px;
+    text-align: left;
+    font-size: 13px;
+    display: block;
+    color: grey;
+    font-family: karnak-normal-400, sans-serif;
+    margin: 0;
+    letter-spacing: 0.24px;
 }
 
 #thumbnails .thumbnails_row .thumbnail_block h3 {
-  font-size: 18px;
-  line-height: 22px;
-  padding: 0;
-  margin: 0;
+    font-size: 18px;
+    line-height: 22px;
+    padding: 0;
+    margin: 0;
+}
+
+.thumbnails_sub_title {
+    display: inline-block;
+    width: 100%;
+    border: 1px solid green;
 }
