--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -318,7 +318,7 @@ footer hr {
     float: left;
     border-top: 1px solid rgb(0, 0, 0);
     margin-bottom: 23%;
-    margin-left: 2%;
+    margin-left: 3%;
 }
 
 #alternative .side_headings {
@@ -344,12 +344,12 @@ footer hr {
     font-weight: 700;
     line-height: 1.375rem;
     /*padding: 15px;*/
-    padding: 0 2% 0 2%;
+    padding: 2%;
 }
 
 #thumbnails {
     border-top: 1px solid rgb(0, 0, 0);
-    padding-top: 2%;
+    /*padding-top: 2%;*/
 }
 
 #thumbnails .thumbnails_row .thumbnail_block {
@@ -370,6 +370,12 @@ footer hr {
     color: grey;
     font-family: karnak-normal-400, sans-serif;
     margin: 0;
+}
+
+.bottom_line_divisor {
+    display: inline-block;
+    width: 100%;
+    border: 1px solid grey
 }
 
 #thumbnails .thumbnails_row {
@@ -397,5 +403,17 @@ footer hr {
 .thumbnails_sub_title {
     display: inline-block;
     width: 100%;
-    border: 1px solid green;
+    padding: 2% 0;
+}
+
+.thumbnails_sub_title a {
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 22px;
+    color: black;
+}
+
+.thumbnails_sub_title a:hover {
+    text-decoration: underline;
+    border-bottom-style: outset;
 }
