added css property to clear thubnail floating effect upon browser resize

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -200,7 +200,7 @@ iframe {
 
 footer {
     /*border: 1px solid red;*/
-    padding: 0 1%;
+    padding: 0 3%;
 }
 
 #foot_title {
@@ -283,7 +283,11 @@ footer .go2home a:hover {
     color: darkslategray;
     letter-spacing: 0.24px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: table-cell;
+    vertical-align: middle;
 }
+
+#last_line {}
 
 footer hr {
     border-color: black;
@@ -416,4 +420,8 @@ footer hr {
 .thumbnails_sub_title a:hover {
     text-decoration: underline;
     border-bottom-style: outset;
+}
+
+.after-box {
+    clear: left;
 }
