--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -162,7 +162,7 @@ main {
 }
 
 article {
-  width: 70%;
+  color: #333;
   margin: auto;
 }
 
@@ -171,8 +171,41 @@ article .part {
 }
 
 article .part .content {
+  width: 80%;
   float: left;
-  margin-left: 15%;
+  padding-left: 25%;
+}
+
+article .part aside {
+  width: 20%;
+  float: right;
+  margin-top: 20%;
+  padding-left: 2%;
+  vertical-align: middle;
+}
+
+article .part > aside img {
+  float: left;
+  width: 70px;
+  margin-right: 10px;
+}
+
+article .part aside article{
+  margin-top: 20px;
+  font-size: 0.9em;
+  overflow: hidden;
+}
+
+article .part aside a{
+  color: inherit;
+  text-decoration: none;
+}
+
+article .part aside h2 {
+  padding: 10px 0;
+  font-size: 0.9em;
+  font-weight: bold;
+  border-bottom: 1px solid #aaa;
 }
 
 article .author,
@@ -216,9 +249,14 @@ article img {
     display: block;
 }
 
-.astronomy * {
+.astronomy {
+  margin-bottom: 40px;
+}
+
+.astronomy p,
+.astronomy span {
   color: #444;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 300;
   line-height: 17px;
   font-family: nyt-franklin,arial,helvetica,sans-serif;
@@ -228,7 +266,55 @@ article img {
 }
 
 .astronomy .img-text {
+  height: 600px;
+  overflow: hidden;
+  position: relative;
+}
 
+.astronomy .img-text span{
+  width: 25%;
+  float: left;
+  padding: 5px;
+  text-align: left;
+}
+
+.astronomy em {
+  font-weight: bold;
+}
+
+.astronomy .sep {
+  width: 70px;
+  margin-top: 50px;
+  border-bottom: 1px solid #000;
+}
+
+.astronomy .first,
+.astronomy .second {
+  overflow: hidden;
+  position: absolute;
+  text-align: center;
+}
+
+.astronomy .first {
+  top: 85px;
+}
+
+.astronomy .second {
+  bottom: 0
+}
+
+.comm button {
+  border: none;
+  color: #fff;
+  font-size: 0.8em;
+  font-weight: bold;
+  padding: 10px 100px;
+  border-radius: 2px;
+  background: #3c7eb1
+}
+
+.comm button:hover {
+  background: #316892;
 }
 
 iframe {
