--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,7 +1,7 @@
 * {
-  box-sizing: border-box;
-  font-size: 14.5px;
-  line-height: 1.4;
+    box-sizing: border-box;
+    font-size: 14.5px;
+    line-height: 1.4;
 }
 
 body {
@@ -116,7 +116,7 @@ main {
     margin: 15px auto;
 }
 
-#photo p > span {
+#photo p>span {
     color: #888;
     font-size: 0.9em;
 }
@@ -126,87 +126,87 @@ main {
 }
 
 .extra a {
-  width: 20px;
-  height: 20px;
-  padding: 7px;
-  display: block;
-  text-align: center;
-  border-radius: 50%;
-  background: #f2f2f2;
-  box-sizing: content-box;
+    width: 20px;
+    height: 20px;
+    padding: 7px;
+    display: block;
+    text-align: center;
+    border-radius: 50%;
+    background: #f2f2f2;
+    box-sizing: content-box;
 }
 
 .extra span.date {
-  top: 8px;
-  position: relative;
+    top: 8px;
+    position: relative;
 }
 
 .extra ul {
-  margin: 0;
-  padding: 0;
-  float: right;
-  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    float: right;
+    list-style-type: none;
 }
 
-.extra ul > li {
-  margin: 0 5px;
-  display: inline-block;
-  vertical-align: middle;
+.extra ul>li {
+    margin: 0 5px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .extra button {
-  cursor: pointer;
-  background: none;
-  border-radius: 5px;
-  border: 1px solid #000;
+    cursor: pointer;
+    background: none;
+    border-radius: 5px;
+    border: 1px solid #000;
 }
 
 article {
-  color: #333;
-  margin: auto;
+    color: #333;
+    margin: auto;
 }
 
 article .part {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 article .part .content {
-  width: 80%;
-  float: left;
-  padding-left: 25%;
+    width: 80%;
+    float: left;
+    padding-left: 25%;
 }
 
 article .part aside {
-  width: 20%;
-  float: right;
-  margin-top: 20%;
-  min-width: 200px;
-  padding-left: 2%;
-  vertical-align: middle;
+    width: 20%;
+    float: right;
+    margin-top: 20%;
+    /*min-width: 200px;*/
+    padding-left: 2%;
+    vertical-align: middle;
 }
 
-article .part > aside img {
-  float: left;
-  width: 70px;
-  margin-right: 10px;
+article .part>aside img {
+    float: left;
+    width: 70px;
+    margin-right: 10px;
 }
 
-article .part aside article{
-  margin-top: 20px;
-  font-size: 0.9em;
-  overflow: hidden;
+article .part aside article {
+    margin-top: 20px;
+    font-size: 0.9em;
+    overflow: hidden;
 }
 
-article .part aside a{
-  color: inherit;
-  text-decoration: none;
+article .part aside a {
+    color: inherit;
+    text-decoration: none;
 }
 
 article .part aside h2 {
-  padding: 10px 0;
-  font-size: 0.9em;
-  font-weight: bold;
-  border-bottom: 1px solid #aaa;
+    padding: 10px 0;
+    font-size: 0.9em;
+    font-weight: bold;
+    border-bottom: 1px solid #aaa;
 }
 
 article .author,
@@ -215,7 +215,7 @@ article .extra {
 }
 
 article .author {
-  font-size: 0.95em;
+    font-size: 0.95em;
 }
 
 article .author a {
@@ -229,7 +229,7 @@ article .author a:hover {
 }
 
 article .author a:hover {
-  border-bottom-color: transparent;
+    border-bottom-color: transparent;
 }
 
 article h2 {
@@ -251,78 +251,79 @@ article img {
 }
 
 .astronomy {
-  margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 .astronomy p,
 .astronomy span {
-  color: #444;
-  font-size: 13px;
-  font-weight: 300;
-  line-height: 17px;
-  font-family: nyt-franklin,arial,helvetica,sans-serif;
+    color: #444;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 17px;
+    font-family: nyt-franklin, arial, helvetica, sans-serif;
 }
+
 .astronomy h2 {
-  margin-bottom: 5px;
+    margin-bottom: 5px;
 }
 
 .astronomy .img-text {
-  height: 600px;
-  min-width: 650px;
-  overflow: hidden;
-  position: relative;
+    height: 600px;
+    min-width: 650px;
+    overflow: hidden;
+    position: relative;
 }
 
-.astronomy .img-text span{
-  width: 25%;
-  float: left;
-  padding: 5px;
-  text-align: left;
+.astronomy .img-text span {
+    width: 25%;
+    float: left;
+    padding: 5px;
+    text-align: left;
 }
 
 .astronomy em {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .astronomy .sep {
-  width: 70px;
-  margin-top: 50px;
-  border-bottom: 1px solid #000;
+    width: 70px;
+    margin-top: 50px;
+    border-bottom: 1px solid #000;
 }
 
 .astronomy .first,
 .astronomy .second {
-  overflow: hidden;
-  position: absolute;
-  text-align: center;
+    overflow: hidden;
+    position: absolute;
+    text-align: center;
 }
 
 .astronomy .first {
-  top: 85px;
+    top: 85px;
 }
 
 .astronomy .second {
-  bottom: 0
+    bottom: 0
 }
 
 .comm button {
-  border: none;
-  color: #fff;
-  font-size: 0.8em;
-  font-weight: bold;
-  padding: 10px 100px;
-  border-radius: 2px;
-  background: #3c7eb1
+    border: none;
+    color: #fff;
+    font-size: 0.8em;
+    font-weight: bold;
+    padding: 10px 100px;
+    border-radius: 2px;
+    background: #3c7eb1
 }
 
 .comm button:hover {
-  background: #316892;
+    background: #316892;
 }
 
 iframe {
-  width: 100%;
-  margin: auto;
-  display: block;
+    width: 100%;
+    margin: auto;
+    display: block;
 }
 
 
