--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -281,6 +281,11 @@ article img {
     text-align: left;
 }
 
+.astronomy .img-text img {
+    width: 100%;
+    height: 100%;
+}
+
 .astronomy em {
     font-weight: bold;
 }
